tests/ui/manual_api_removed.rs
use vantus::{RouteDefinition, Router};

fn main() {
    let _ = Router::new();
    let _ = RouteDefinition::new;
}
